# taiwan-stock-sandbox

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  readme.html  requirements.txt  security_manual.html  security_manual.md  sql_explain.html  unit_test_manual.html  unit_test_manual.md
app/: constants.py  database.py  dependencies.py  main.py  save_access.py
app/routers/: accounts.py  auth.py  holdings.py  orders.py  save_stocks.py  saves.py  stocks.py  watchlist.py
app/static/: swagger-dark.css
backend_tests/: conftest.py  run_schemathesis.sh  security_test.py  smoke_test.py  test_security.py  test_smoke.py
data_import_tool/: Readme.md
data_import_tool/script/: clean_dailyprice.py  clean_stock.py  clean_suspend.py  common.py  upload_dailyprice.py  upload_stock.py  upload_suspend.py
docs/: Backend_API.md  links.md  錢錢錢市 股票模擬系統 規則 V1.md
docs/report1-1/: report1-1.tex
docs/report1-2/: report1-2.tex
docs/report2/: report2.tex
docs/report3/: report3.tex
docs/report3/flowchart/: 2_validate.md  5_phase.md  7_order.md
docs/report4/: report.md  report4.tex
evaluation-configs/: example.toml
foundry/: requirements.txt
foundry/index/: parser.py
foundry/rules/: loader.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.test.js  App.vue  style.css
frontend/src/api/: cache.js  (+1 more)
specs/001-foundry/: data-model.md  plan.md  quickstart.md  research.md  spec.md
tests/unit/: test_budget.py  test_evidence_gate.py  test_fingerprint.py  test_queue_claim.py
(+71 files in other folders)
