[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "foundry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
foundry = "foundry.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["foundry*"]
